--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=back-andRestaurante
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurante22
+spring.datasource.url=jdbc:postgresql://localhost:5432/ApiPedidos
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
+api.security.token.secret=123
